[package]
name = "star"
version = "0.6.0-SNAPSHOT"
description = "Test program for network policies"
repository = "https://github.com/mesosphere/star.git"
readme = "README.md"
license = "Apache-2.0"
authors = [
  "Connor Doyle <connor@mesosphere.io>",
]

[dependencies]
docopt = "0.6.66"
hyper = "0.10.11"
log = "0.3.1"
jsonway = "0.3.4"
rustc-serialize = "0.3.15"
threadpool = "0.1.4"
time = "0.1"
mio = "0.5.0"
